Done Book, Author, Review API endpoints.